--- a/src/main/resources/static/cart.html
+++ b/src/main/resources/static/cart.html
@@ -161,8 +161,8 @@
 									<th class="product-total">Total</th>
 								</tr>
 							</thead>
-							<tbody>
-								<tr class="table-body-row">
+							<tbody id="tableBody">
+							<!--	<tr class="table-body-row">
 									<td class="product-remove"><a href="#"><i class="far fa-window-close"></i></a></td>
 									<td class="product-image"><img src="assets/img/products/product-img-1.jpg" alt=""></td>
 									<td class="product-name">Strawberry</td>
@@ -185,9 +185,12 @@
 									<td class="product-price">$35</td>
 									<td class="product-quantity"><input type="number" placeholder="0"></td>
 									<td class="product-total">1</td>
-								</tr>
+								</tr> -->
 							</tbody>
 						</table>
+						<script src="assets/js/app.js"></script>
+						<script src="assets/js/deleteItem.js"></script>
+						<script src="assets/js/changeItem.js"></script>
 					</div>
 				</div>
 
